<resources>
    <string name="app_name">EduCook</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="desc_signup_page">Create your account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="bangkit">Bangkit Team</string>
    <string name="capstone">Capstone Project</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="have_account">Have an account?</string>
    <string name="or">Or</string>
    <string name="signin_google">Sign In with Google</string>
    <string name="title_signin">Welcome Back</string>
    <string name="desc_signin_page">Sign in to your account</string>
    <string name="to">to</string>
    <string name="edu_cook">EduCook</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="dont_have_acc">Don’t have an account?</string>
    <string name="password_char">Password less than 6 characters</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="profile">Profile</string>
    <string name="insert_photo">Insert Photo</string>
    <string name="title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="upload">Upload</string>
    <string name="photo">Photo</string>
    <string name="my_recipe">My Recipes</string>
    <string name="logout">Logout</string>
    <string name="tittleCard">Cumi Balado</string>
    <string name="recommendation">Recommendation</string>
    <string name="uploudBy">by Team Capstone,</string>
    <string name="homeText">Hello, Capstone!</string>
    <string name="homeText2">Let\'s make your own food</string>
    <string name="share_button">Share Recipe</string>
    <string name="todayRecipe">Today Recipe</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="recipe_ingredients">
    200 gr cumi basah\n
    1 jeruk nipis\n
    1/4 buah bawang bombay\n
    8 siung bawang merah\n
    6 buah cabe merah keriting\n
    6 buah cabe rawit merah\n
    1 buah tomat merah ukuran kecil
    </string>
    <string name="recipe_instructions">
    Cuci bersih cumi. Buang tinta hitam, baluri dengan air jeruk nipis. Diamkan 10 menit, bilas, tiriskan.\n
    \n
    Iris bawang bombay sesuai selera. Blender bumbu halus.\n
    \n
    Panaskan minyak goreng, tumis bawang bombay sampai layu ditandai dengan warna bawang bombay yang transparan. Setelah itu masukkan bumbu halus, tumis bumbu sampai tanak dan matang agar tidak langu.\n
    \n
    Setelah bumbu tanak, tambahkan bumbu tabur. Aduk, besarkan api kompor, masukkan cumi basah. Aduk-aduk, masak sekitar 3-5 menit saja agar cumi tidak alot. Cicipi dulu ya sebelum diangkat. Siap saji.
    </string>
    <string name="background">Background</string>
    <string name="card_share">Card Share</string>
    <string name="share_recipe">Share your recipes to inspire others to cook</string>
    <string name="see_all">See all</string>
    <string name="home">Home</string>
    <string name="camera_navigation">Camera Navigation</string>
    <string name="register_success">Sign Up Success</string>
    <string name="login_success">Sign In Success</string>
    <string name="empty_image_warning">Please insert the image file first</string>
    <string name="upload_success">Recipe uploaded successfully</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="no_data_found">No Data Found</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
</resources>