<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?attr/colorSecondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_arrow_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/input_background"
            android:contentDescription="@string/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add_recipe"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <ImageView
            android:id="@+id/iv_insert_photo"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:srcCompat="@drawable/ic_insert_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_arrow_back"
            android:contentDescription="@string/insert_photo" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:padding="15dp"
            android:background="@drawable/input_background"
            android:hint="@string/title"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_insert_photo"
            android:autofillHints="Title" />

        <EditText
            android:id="@+id/et_ingredient"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:padding="15dp"
            android:gravity="top"
            android:maxLines="10"
            android:lineSpacingExtra="5dp"
            android:scrollbars="vertical"
            android:background="@drawable/input_background"
            android:hint="@string/ingredients"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            android:autofillHints="Ingredients" />

        <EditText
            android:id="@+id/et_directions"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:padding="15dp"
            android:gravity="top"
            android:maxLines="10"
            android:lineSpacingExtra="5dp"
            android:scrollbars="vertical"
            android:background="@drawable/input_background"
            android:hint="@string/directions"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_ingredient"
            android:autofillHints="Ingredients" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:text="@string/upload"
            android:fontFamily="@font/roboto_bold"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_directions" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="?attr/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>